# paychains

./: .env.example  .gitignore  QA_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  alembic.ini  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_xpub_key.py
backend/app/: config.py  constants.py  database.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  analytics.py  (+8 more)
backend/app/blockchain/: base.py  bitcoin.py  ethereum.py  monitor.py  solana.py  wallet.py
backend/app/models/: __init__.py  merchant.py  payment.py  payment_link.py  payout.py  subscription.py  webhook_event.py
backend/app/schemas/: merchant.py  payment.py  subscription.py  webhook.py
backend/app/services/: email_service.py  payment_service.py  webhook_service.py
backend/app/utils/: crypto.py  pricing.py  qrcode.py
backend/app/workers/: celery_app.py  conversion_tasks.py  monitor_tasks.py  payout_tasks.py  subscription_tasks.py  webhook_tasks.py
backend/tests/: conftest.py  test_api.py  test_erc20_address.py  test_payments.py
frontend/: package-lock.json  package.json  svelte.config.js  vercel.json
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/javascript/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/paychains/: __init__.py  async_client.py  client.py  exceptions.py
(+23 files in other folders)
