[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paychains"
version = "0.1.0"
description = "Python SDK for the PayChains API"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://paychains.dev"
Documentation = "https://docs.paychains.dev"
